kubernetes/demo-app-pvc/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demoapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demoapp
  template:
    metadata:
      labels:
        app: demoapp
    spec:
      containers:
      - name: demoapp
        image: cfahrni/rancher-demo
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - mountPath: "/mnt"
            name: demoapp-pvc
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "64Mi"
            cpu: "250m"
      restartPolicy: Always
      volumes:
        - name: demoapp-pvc
          persistentVolumeClaim:
            claimName: demoapp-pvc
